--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
       </div>
     </div>
-    <div class="buttons-container">
-      <button class="idvc-button" id="config1">Change config 1</button>
-      <button class="idvc-button" id="config2">Change config 2</button>
-    </div>
+<!--    <div class="buttons-container">-->
+<!--      <button class="idvc-button" id="config1">Change config 1</button>-->
+<!--      <button class="idvc-button" id="config2">Change config 2</button>-->
+<!--    </div>-->
     <script type="module" src="/main.js"></script>
     <script>
       let newConfig = {
@@ -89,12 +89,12 @@
           // },
         ]
       };
-      document.getElementById('config1').addEventListener('click', () => {
-        window.IDVC.reloadComponent(newConfig)
-      })
-      document.getElementById('config2').addEventListener('click', () => {
-        window.IDVC.reloadComponent(newConfig1)
-      })
+      // document.getElementById('config1').addEventListener('click', () => {
+      //   window.IDVC.reloadComponent(newConfig)
+      // })
+      // document.getElementById('config2').addEventListener('click', () => {
+      //   window.IDVC.reloadComponent(newConfig1)
+      // })
     </script>
   </body>
 </html>
